flapivor/tests/m1/hopix/parser/good/26-char-literal-6.hopix
val x = '\r'
val y = '\b'