flapivor/tests/m1/hopix/parser/bad/26-char-literal-6.hopix
val x = '\s'
val y = '\B'